--- a/analysis/reports/diarios/2025-09-26-sessao-01.md
+++ b/analysis/reports/diarios/2025-09-26-sessao-01.md
@@ -41,3 +41,6 @@
 
 - **Garmin Connect (Active Intelligence, 25/09/2025 22:05)** — resumo automático: "Your breathwork session today lasted 11 minutes with an average respiration rate of 4 breaths per minute. Your average heart rate remained at 63 bpm throughout the practice. It's notable that your stress level decreased by 39 points during the session, indicating potential benefits of breathwork for relaxation."
     - Captura armazenada na conversa (Garmin Connect → Início → Atividade de hoje).
+
+![Garmin Connect](2025-09-26-garmin.png)
+
