--- a/analysis/reports/diarios/2025-09-26-sessao-01.md
+++ b/analysis/reports/diarios/2025-09-26-sessao-01.md
@@ -39,6 +39,7 @@
 
 ## Anexos
 
+- **Relatório de Sono (Garmin, noite 25→26/09/2025)** — [PDF](2025-09-26-sono.pdf). Destaques: sono total 9h19m; profundo 2h32 (27%); REM 1h44 (19%); FC repouso 54 bpm; Body Battery +27; respiração média 15 brpm (mín. 11); SpO₂ média 93% (nadir 85%).
 - **Garmin Connect (Active Intelligence, 25/09/2025 22:05)** — resumo automático: "Your breathwork session today lasted 11 minutes with an average respiration rate of 4 breaths per minute. Your average heart rate remained at 63 bpm throughout the practice. It's notable that your stress level decreased by 39 points during the session, indicating potential benefits of breathwork for relaxation."
     - Captura armazenada na conversa (Garmin Connect → Início → Atividade de hoje).
 
