resumo diario 28 de setembr

--- a/analysis/reports/diarios/2025-09-28-diario.md
+++ b/analysis/reports/diarios/2025-09-28-diario.md
@@ -1,54 +1,53 @@
-# Diário BRH — {{DATA}}
+# Diário BRH — 2025-09-28
 
-**Data:** {{DATA}}  
+**Data:** 2025-09-28  
 **Participante:** Débora Lutz  
-**Resumo do Dia:** {{breve narrativa do dia}}
+**Resumo do Dia:** Recuperação tranquila, acompanhada de observação atenta dos sinais físicos (mãos/unhas) e métricas Garmin.
 
 ---
 
 ## 💤 Sono
-- **Duração total:** {{ex: 7h45}}
-- **Estágios:** Profundo {{h}} / Leve {{h}} / REM {{h}} / Acordada {{m}}
-- **Eventos relevantes:** {{ex: despertares, sonhos, SpO₂ mín 85%}}
+- **Duração total:** 7h49
+- **Estágios:** Profundo 1h20 / Leve 5h21 / REM 1h08 / Acordada 3min
+- **Eventos relevantes:** SpO₂ mínima 81% durante a madrugada (média 92%).
 
 ---
 
 ## 🌡️ Fisiologia
-| Métrica                 | Valor             | Observações                         |
-|-------------------------|-------------------|--------------------------------------|
-| HRV (média noite)       | {{ms}}           |                                      |
-| Frequência cardíaca rep | {{bpm}}          |                                      |
-| Body Battery ao acordar | {{valor/100}}    |                                      |
-| SpO₂ média (noite)      | {{%}}            |                                      |
-| SpO₂ média (dia)        | {{%}}            |                                      |
+| Métrica                 | Valor          | Observações                                              |
+|-------------------------|----------------|----------------------------------------------------------|
+| HRV (média noite)       | —              | (não disponível no resumo do Garmin)                     |
+| Frequência cardíaca rep | 57 bpm         | Dentro da faixa habitual                                 |
+| Body Battery ao acordar | +57 (noite); 47/100 ao meio-dia | Recuperação adequada, drenagem ligada a estresse emocional |
+| SpO₂ média (noite)      | 92 %           | Registrar quedas abaixo de 88 % se persistirem           |
+| SpO₂ média (dia)        | 92 % (leituras contínuas) | Ajuste de sensor concluído para acompanhar durante o dia |
 
 ---
 
 ## 🧠 Estresse & Humor
-- **Score Garmin:** {{ex: 29/100}}
-- **Distribuição:** {{ex: 9h descanso, 4h baixo, 2h médio, 30min alto}}
-- **Humor subjetivo:** {{ex: bom, neutro}}
-- **Observações:** {{ex: estresse situacional, sem esforço físico}}
+- **Score Garmin:** —
+- **Distribuição:** — (não informado pelo app neste dia)
+- **Humor subjetivo:** Estável, mesmo com sinais físicos a monitorar.
+- **Observações:** Estresse percebido como emocional/ambiental; sem esforço físico significativo.
 
 ---
 
 ## 📝 Anotações Pessoais
-{{Espaço livre para sentimentos, insights, práticas espirituais ou BRH}}
+- Unhas e cutículas com aspecto mais rugoso.
+- Dedos e parte da mão esquerda com leve perda de sensibilidade (desde alguns meses).
+- Ambiente atual reconhecido como fator de estresse emocional; reforçada a intenção de mudança.
 
 ---
 
 ## 📎 Anexos
-- [Resumo PDF]({{link para YYYY-MM-DD-resumo-diario.pdf}})
-- [Diário do Sono PDF]({{link para YYYY-MM-DD-diario-do-sono.pdf}})
+- [Resumo PDF](2025-09-28-resumo-diario.pdf)
+- [Diário do Sono PDF](2025-09-28-diario-do-sono.pdf)
+- [CSV do sono](2025-09-28-sono.csv)
 - Gráficos:  
-  - ![FC](../diarios/{{DATA}}-fc.png)
-  - ![Body Battery](../diarios/{{DATA}}-body-battery.png)
-  - ![Estresse](../diarios/{{DATA}}-estresse.png)
-  - ![SpO₂](../diarios/{{DATA}}-sono.png)
+  - ![Sono](2025-09-28-sono.png)
 
 ---
 
 **Como usar:**
-1. Substitua `{{…}}` pelos valores do dia.
-2. Salve como `analysis/reports/diarios/{{DATA}}-diario.md`.
-3. Gere PDFs e gráficos com o mesmo prefixo de data.
+1. Atualize com novas medições caso surjam (HRV, stress score, etc.).
+2. Gere PDFs e gráficos adicionais com o mesmo prefixo de data para manter a convenção.
