--- a/analysis/reports/diarios/2025-09-29-diario.md
+++ b/analysis/reports/diarios/2025-09-29-diario.md
@@ -25,10 +25,10 @@
 ---
 
 ## 🧠 Estresse & Humor
-- **Score Garmin:** —
-- **Distribuição:** —
+- **Score Garmin:** 42/100
+- **Distribuição:** Predomínio de estresse leve a moderado mesmo em dia de descanso prolongado.
 - **Humor subjetivo:** Estável, com foco em autorregulação suave.
-- **Observações:** Sem esforço físico relevante; estresse percebido como ambiental/situacional.
+- **Observações:** Sem esforço físico relevante; estresse percebido como ambiental/situacional. Insight do Garmin (Active Intelligence): "Your Body Battery values have been showing inconsistency lately... mantenha consistência para gerir energia." Registrar especial atenção ao despertar (score 64 vs média 81) e planejar pausas de relaxamento.
 
 ---
 
